--- a/modules/ROOT/pages/source.adoc
+++ b/modules/ROOT/pages/source.adoc
@@ -222,7 +222,7 @@ Pick one of the following message serialization formats, save the content of the
 =====
 [source,json]
 ----
-include::ROOT:example$docker-data/source.cdc.avro.neo4j.json[]
+include::example$docker-data/source.cdc.avro.neo4j.json[]
 ----
 =====
 
@@ -230,7 +230,7 @@ include::ROOT:example$docker-data/source.cdc.avro.neo4j.json[]
 =====
 [source,json]
 ----
-include::ROOT:example$docker-data/source.cdc.json.neo4j.json[]
+include::example$docker-data/source.cdc.json.neo4j.json[]
 ----
 =====
 
@@ -238,7 +238,7 @@ include::ROOT:example$docker-data/source.cdc.json.neo4j.json[]
 =====
 [source,json]
 ----
-include::ROOT:example$docker-data/source.cdc.json-string.neo4j.json[]
+include::example$docker-data/source.cdc.json-string.neo4j.json[]
 ----
 =====
 ====
@@ -290,7 +290,7 @@ Pick one of the following message serialization formats, save the content of the
 =====
 [source,json]
 ----
-include::ROOT:example$docker-data/source.query.avro.neo4j.json[]
+include::example$docker-data/source.query.avro.neo4j.json[]
 ----
 =====
 
@@ -298,7 +298,7 @@ include::ROOT:example$docker-data/source.query.avro.neo4j.json[]
 =====
 [source,json]
 ----
-include::ROOT:example$docker-data/source.query.json.neo4j.json[]
+include::example$docker-data/source.query.json.neo4j.json[]
 ----
 =====
 
@@ -306,7 +306,7 @@ include::ROOT:example$docker-data/source.query.json.neo4j.json[]
 =====
 [source,json]
 ----
-include::ROOT:example$docker-data/source.query.json-string.neo4j.json[]
+include::example$docker-data/source.query.json-string.neo4j.json[]
 ----
 =====
 ====
